@@ -123,7 +123,7 @@ However, it seems we do not have a widget for hidden mode ;-(
   >>> browser.open(portal.absolute_url())
   >>> input = browser.getControl(name='default-channel.html.widgets.composer.email')
   >>> input.value
-  'root@domain.tld'
+  ''
   >>> input.type
   'text'
   >>> input.disabled
